# EdgeSimPy-CAVIA

./: .gitignore  pyproject.toml  requirements.txt
adapters/cavia/: adapter_plot_topology.ipynb  cavia_scenario_loader.py  find_valid_scenarios.py  inspect_pkl.py  scenario_loader.py  service_adapter.py  topology_adapter.py  valid_scenarios_cache.json
adapters/cavia/dump_scenarios/: invalid_scenarios.json  valid_scenarios_cache.json
adapters/cavia/utils/: distributions.py  path.py  (+1 more)
analysis/: 01_analysis_sla_worst_case.ipynb  01_cleaning.ipynb  01_cleaning_data_user.ipynb  02_analysis_service.ipynb  02_analysis_sla_data_user.ipynb  aggregate_data.py  aggregate_datapacket_user.py  build_worst_case_dataset.py  verify_cavia_mean.py
analysis/utils/: analysis_utils.py
edge_sim_py/: component_manager.py  simulator.py
edge_sim_py/components/: data_packet.py  network_flow.py  service.py  user.py
edge_sim_py/utils/: edge_sim_py_resetter.py
scripts/: run_all_jobs.py  run_full_pipeline.py
simulation/cavia simulation/: all cavia simulation.ipynb
simulation/cavia simulation test/: scenarioV1.ipynb
simulation/cavia_simulation/: cavia_simulation.py
simulation/test_simulation_cavia/: scenarioV1.ipynb
simulation/test_simulation_edge/: dataset1.ipynb  simulation_dataset1.ipynb
tesi/: dataset1.ipynb
tesi/cavia test/: scenarioV1.ipynb
tesi/simulation test/: dataset1.ipynb  simulation_dataset1.ipynb
tests/cavia_loader/: test_cavia_loader.py
tests/integration/: conftest.py  plot_topology_show.ipynb
visualization/: plot_cavia_topology.py  plot_topology.py
(+29 files in other folders)
