[project]
name = "edge_sim_py"
version = "1.1.0"
description = "Python-based modeling and simulation framework for Edge Computing resource management policies"
authors = [
    { name = "Paulo Severo", email = "paulo.severo@edu.pucrs.br" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Mesa>=1.0.0,<2.0.0",
    "networkx==3.4.2",
    "msgpack>=1.0.4,<2.0.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.3.1,<2.0.0",
    "mkdocs-material>=8.4.2,<9.0.0",
    "mkdocstrings>=0.19.0,<1.0.0",
    "mkdocstrings-python>=0.7.1,<1.0.0",
    "black>=25.1.0,<26.0.0",
    "ruff>=0.14.5,<1.0.0",
    "pytest>=9.0.1,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "mypy>=1.18.2,<2.0.0",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=1.24,<2.0)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160

[tool.ruff]
line-length = 160